--- a/README.Rmd
+++ b/README.Rmd
@@ -17,18 +17,18 @@ library(ggplot2)
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Explorando microbiomas com R <imgs src="imgs/gemm-hex.png" align="right" width = "120px"/>
+# Explorando microbiomas com R <img src="imgs/gemm-hex.png" align="right" width = "120px"/>
 
 O R é uma linguaguem muito versátil, que é amplamente usada em diferentes áreas. Este tutorial apresenta as principais funções do pacote [Phyloseq](https://joey711.github.io/phyloseq/) para a análises de microbiomas, principalmente a partir das saída do processamento das sequencias em [qiime2](https://qiime2.org/).
 Em conjunto com **ggplot2** é possível construir diversos gráficos para caracterizar e visualizar microbiomas. 
 
 ## Análise de microbiomas
 
-<imgs src="imgs/analises.png" align="center" width = "120px"/>
+<img src="imgs/analises.png" align="center" width = "100%"/>
 
 Neste tutorial os principais pacotes usados são:
 
-<imgs src="ims/qiime2R.png" width = "120px"/> <imgs src="imgs/phyloseq-hex.png" width = "120px"/> <imgs src="imgs/ggplot2-hex.png" align="right" width = "120px"/>
+<img src="imgs/qiime2R.png" width = "120px"/> <img src="imgs/phyloseq-hex.png" width = "120px"/> <img src="imgs/ggplot2-hex.png" width = "120px"/>
 
 
 ## Instalação
