--- a/README.Rmd
+++ b/README.Rmd
@@ -17,13 +17,10 @@ library(ggplot2)
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-<<<<<<< HEAD
 <!-- badges: start -->
-https://img.shields.io/badge/GEMM-Building-blue
+[![ForTheBadge built-with-love](http://ForTheBadge.com/images/badges/built-with-love.svg)](https://GitHub.com/Naereen/)
 <!-- badges: end -->
 
-=======
->>>>>>> bd7f529c3da1e01e5d006bec163da9744133ca2f
 # Explorando microbiomas com R <img src="imgs/gemm-hex.png" align="right" width = "120px"/>
 
 O R é uma linguaguem muito versátil, que é amplamente usada em diferentes áreas. Este tutorial apresenta as principais funções do pacote [Phyloseq](https://joey711.github.io/phyloseq/) para a análises de microbiomas, principalmente a partir das saída do processamento das sequencias em [qiime2](https://qiime2.org/).
